# remote-attestation-verifier

./: Cargo.toml  README.md
.github/workflows/: cargo-publish.yaml
fixtures/: invalid_attestation
src/: aws_root.der  aws_root_invalid.pem  chain_certs.json  example_attestation  example_attestation_2  lib.rs
