[package]
name = "nitro-enclave-attestation-document"
version = "0.1.0"
authors = ["dermil01"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_cbor = { version = "0.11" }
serde = "1.0"
rustls = { version = "0.20.4", default-features = false, features = ["dangerous_configuration"] }
webpki = "0.22.0"
byteorder = "1.3.4"
serde_with = { version = "1.9.4", default-features = false }
aws-nitro-enclaves-cose = "0.5.2"
openssl = "0.10.31"
base64 = "0.22.1"
hex = "0.4"
rand = { version = "0.8", default-features = false, features = ["min_const_gen", "std", "std_rng"] }
rustls-pemfile = { version = "2.1.2", features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
